<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDE5E8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/datumRodjenja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/datum_rodjenja"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/rasaUnos"
        app:layout_constraintTop_toBottomOf="@+id/rasaUnos" />

    <EditText
        android:id="@+id/rasaUnos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="Unesite rasu:"
        android:ems="10"
        android:hint="@string/npr_haski"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="@+id/imeUnos"
        app:layout_constraintStart_toStartOf="@+id/rasa"
        app:layout_constraintTop_toBottomOf="@+id/rasa" />

    <TextView
        android:id="@+id/ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/ime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imeUnos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Unesite ime:"
        android:ems="10"
        android:hint="@string/npr_dzoni"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        android:textColorLink="#252222"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ime"
        app:layout_constraintTop_toBottomOf="@+id/ime" />

    <TextView
        android:id="@+id/rasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rasa"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imeUnos"
        app:layout_constraintTop_toBottomOf="@+id/imeUnos" />

    <TextView
        android:id="@+id/tezina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tezina"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btDatum"
        app:layout_constraintTop_toBottomOf="@+id/btDatum" />

    <EditText
        android:id="@+id/tezinaUnos"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Unesite tezinu u kg:"
        android:ems="10"
        android:hint="@string/npr_15kg"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="@+id/tezina"
        app:layout_constraintTop_toBottomOf="@+id/tezina" />

    <TextView
        android:id="@+id/pol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/pol"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tezinaUnos"
        app:layout_constraintTop_toBottomOf="@+id/tezinaUnos" />

    <RadioGroup
        android:id="@+id/OdabirPola1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/pol"
        app:layout_constraintTop_toBottomOf="@+id/pol">

        <RadioButton
            android:id="@+id/polMuski"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button_muski" />

        <RadioButton
            android:id="@+id/polZenski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_button_zenski" />

    </RadioGroup>

    <TextView
        android:id="@+id/datumR"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tackeDatum"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btDatum" />

    <Button
        android:id="@+id/btDatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btDatum"
        android:textColor="#006064"
        app:layout_constraintStart_toStartOf="@+id/datumRodjenja"
        app:layout_constraintTop_toBottomOf="@+id/datumRodjenja" />

    <Button
        android:id="@+id/btDodaj"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/btDodaj"
        android:textColor="#006064"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btDodajSliku"
        app:layout_constraintTop_toBottomOf="@+id/OdabirPola1" />

    <Button
        android:id="@+id/btDodajSliku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dodaj_sliku"
        android:textColor="#006064"
        app:layout_constraintStart_toStartOf="@+id/OdabirPola1"
        app:layout_constraintTop_toBottomOf="@+id/OdabirPola1" />

</androidx.constraintlayout.widget.ConstraintLayout>